# yt-term

./: .gitignore  2  ARTICLE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
old/: audio_player.rs  encoder.rs  main.rs
src/: args.rs  audio_player.rs  display_manager.rs  encoder.rs  kitty_encoder.rs  kitty_graphics_protocol_encoder.rs  main.rs  rgb_streamer.rs  ring_buffer.rs  screen_guard.rs  video_buffer.rs  yt_utils.rs
src/audio/: adapter.rs  streamer.rs
src/demux/: codec_context.rs  decoder.rs  demultiplexer.rs  get_moov_box.rs  get_sample_map.rs  moov.rs  sample_data.rs
src/helpers/: adapter.rs  args.rs  logger.rs  structs.rs  types.rs
src/tui/: app.rs  mod.rs  search.rs  terminal.rs  ui.rs
src/video/: adapter.rs  encoder.rs  streamer.rs
