[package]
name = "yt-term"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
base64 = "0.21"
libc = "0.2.172"
cpal = "0.16"
ffmpeg-next = "8.0.0"
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
